<resources>
    <string name="app_name">StayOnlyHealthly</string>
    <string name="tv_bienvenida">Bienvenido/a</string>
    <string name="tv_enviarformulario">Enviar formulario</string>
    <string name="tv_cuestion">Cuentanos que tal te ha ido hoy:</string>
    <string name="tv_personasatendidas">¿A cuantas personas has atendido?</string>
    <string name="tv_ccs">¿Cuantos tenían CC?</string>
    <string name="prefs_file">com.stay.informarnos.PREFERENCE_FILE_KEY</string>
    <string name="tv_contraseñaolvidada">Recuperar contraseña</string>
    <string name="tv_reset">Las instrucciones para recuperar su contraseña serán enviadas a su email</string>
    <string name="tv_iniciarsesion">Iniciar Sesión</string>
    <string name="tv_register">Registrarse</string>
    <string name="tv_buendia">Te deseamos un buen día</string>
    <string name="tv_paraenviar">Envio de Formulario</string>
    <string name="tv_misdatos">Mis Datos</string>
    <string name="tv_tuscc">Calendarios Completos</string>
    <string name="tv_tuspa">Personas Atendidas</string>
    <string name="tv_tusdosis">Dosis</string>
    <string name="tv_datosverificados">Recuerda verificar los datos antes de enviarlos.</string>
    <string name="tv_verestadisticas">Mis Estadisticas</string>
    <string name="tv_dosisplicadas">¿Cuantas dosis has aplicado en total?</string>
    <string name="tv_fecha">Selecciona la fecha de subida</string>
    <string name="tv_seleccionarfecha">DD-MM-AAAA</string>
    <string name="tv_guardarcambios">Guardar cambios</string>
    <string name="tv_fdp">Foto de Perfil</string>
    <string name="tv_contraActual">Contraseña actual</string>
    <string name="tv_nuevacontra">Nueva contraseña</string>
    <string name="tv_confirmarcontra">Confirmar nueva contraseña</string>
    <string name="tv_cambiarcontra">Cambiar contraseña</string>
    <string name="tv_nombrecompleto">Nombre/s y apellido/s completo/s</string>
    <string name="tv_ingresaremail">Email</string>
    <string name="tv_ingresarcontra">Contraseña</string>
    <string name="tv_hasolvidado">¿Has olvidado tu contraseña?</string>
    <string name="tv_cerrarsesion">¿Desea cerrar sesion?</string>
    <string name="tv_tusestadisticas">Seleccione una fecha para ver sus estadisticas</string>
    <string name="tv_tusdosisapli">Dosis aplicadas:</string>
    <string name="tv_tusccapli">Calendarios completos:</string>
    <string name="tv_tuspersonasa">Has atendido a:</string>
    <string name="tv_nombredeusuario">Nombre de usuario</string>
    <string name="tv_cambiarEmail">Cambiar Email</string>
    <string name="tv_nuevoemail">Nuevo Email</string>
    <string name="tv_sideseasemail">Si desea cambiar su email ingrese su contraseña.</string>
    <string name="tv_buscarpaciente">Buscar paciente</string>
    <string name="hint_ingresedni">Ingresar DNI</string>
    <string name="tv_pacientenoencontrado">Paciente no encontrado, ingresa sus datos</string>
    <string name="tv_registraraplicaciones">Registro de aplicaciones</string>
    <string name="hint_ingressexo">Sexo</string>
    <string name="hint_ingreseapellido">Apellido</string>
    <string name="hint_ingresenombre">Nombre</string>
    <string name="hint_ingreseprovincia">Provincia</string>
    <string name="hint_ingresedepartamento">Departamento</string>
    <string name="hint_ingresfdn">Fecha de nacimiento</string>
    <string name="hint_ingresafds">Seleccione la fecha de aplicación</string>
    <string name="hint_lote">Ingresar Lote</string>
    <string name="tv_seleccionarcategoria">Categoría de la aplicación</string>
    <string name="tv_seleccionarvacuna">Vacunas u otros biológicos</string>
    <string name="tv_seleccionarmotivo">Condición o motivo</string>
    <string name="tv_agregaraplicacion">Agregar aplicacion</string>
    <string name="tv_generarficha">Generar ficha</string>
    <string name="tv_crearficha">Crear ficha</string>
    <string name="tv_numerodedosis">Dosis</string>
    <string name="tv_menu">Menu Principal</string>
    <string name="tv_envdatos">Enviar Datos</string>
    <string name="tv_pacientenoregistrado">Paciente no encontrado, por favor crea su ficha</string>
    <string name="tv_buscar">Buscar</string>

</resources>