<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".ui.fragments.RegistroDeAplicaciones"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layoutRegistro"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#2a4365">

                <ImageView
                    android:id="@+id/ivInyeccion"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/inyeccion" />

                <TextView
                    android:id="@+id/tvRegistroDeAplicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivInyeccion"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:enabled="true"
                    android:text="@string/tv_registraraplicaciones"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutBuscarYaplicar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutRegistro"
                android:visibility="invisible">

                <EditText
                    android:id="@+id/etBuscarPorDni"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_ingresedni"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="#0E0D0D"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/bVerFicha"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bVerFicha"
                    android:layout_width="54dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_buscar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layoutCrearFicha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layoutRegistro"
                android:animateLayoutChanges="true"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tvPacienteNoRegistrado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_pacientenoencontrado"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etIngreseDNI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_ingresedni"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="#0B0A0A" />

                <EditText
                    android:id="@+id/etIngreseNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_ingresenombre"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="#0B0A0A" />

                <EditText
                    android:id="@+id/etIngreseApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_ingreseapellido"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="#0B0A0A" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_ingresfdn"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/bIngreseFdn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#FFFF"
                    android:drawableStart="@drawable/calendario"
                    android:hint="@string/tv_seleccionarfecha"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_ingressexo"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spSexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_ingreseprovincia"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spProvincias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/bGenerarFicha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#2a4365"
                    android:text="@string/tv_generarficha"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAplicaciones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/layoutRegistro"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tvDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/tvNombreyApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/tvFdn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_ingresafds"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/bFechaDeRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:backgroundTint="#FFFF"
                    android:drawableStart="@drawable/calendario"
                    android:hint="@string/tv_seleccionarfecha"
                    android:textAllCaps="false"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="14sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_seleccionarcategoria"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_seleccionarvacuna"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sVacunasOBiologico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_seleccionarmotivo"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/sMotivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/tvSeleccioneDosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_numerodedosis" />

                <Spinner
                    android:id="@+id/sNDosis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <EditText
                    android:id="@+id/etLote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_lote"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <Button
                    android:id="@+id/bAgregarAplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#2a4365"
                    android:text="@string/tv_envdatos"
                    android:textSize="15sp" />
            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>

</ScrollView>