<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    tools:context=".ui.fragments.BuscarPaciente"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/layoutHead"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#2a4365">

            <ImageView
                android:id="@+id/ivPaciente"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerInParent="true"
                android:src="@drawable/info2" />

            <TextView
                android:id="@+id/tvBuscarPaciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivPaciente"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:enabled="true"
                android:text="@string/tv_buscarpaciente"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutBuscarPorDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutHead"
            android:visibility="invisible">

            <EditText
                android:id="@+id/etDni"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ingresedni"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#0E0D0D"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/bBuscarPorDni"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bBuscarPorDni"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_buscar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutCrearFicha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutHead"
            android:animateLayoutChanges="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvPacienteNoRegistrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_pacientenoencontrado"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etIngreseDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ingresedni"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#0B0A0A" />

            <EditText
                android:id="@+id/etIngreseNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ingresenombre"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="#0B0A0A" />

            <EditText
                android:id="@+id/etIngreseApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ingreseapellido"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="#0B0A0A" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_ingresfdn"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bIngreseFdn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFF"
                android:drawableStart="@drawable/calendario"
                android:hint="@string/tv_seleccionarfecha"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_ingressexo"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_ingreseprovincia"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spProvincias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bGenerarFicha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="#2a4365"
                android:text="@string/tv_generarficha"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutDosisYDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutHead"
            android:animateLayoutChanges="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/tvNumeroDeDni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvNombreyApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_seleccionarcategoria" />

            <Spinner
                android:id="@+id/sBuscarCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_seleccionarvacuna" />

            <Spinner
                android:id="@+id/sBuscarAplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/bBuscarVacuna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="#2a4365"
                android:text="Buscar Aplicacion" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="4dp" />

            <TextView
                android:id="@+id/tvAplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvFdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>

</ScrollView>
